# mit-license

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  README_CLI.md  README_RUST.md  auto-mit.nuspec  license-config.example.yaml  package-lock.json  package.json  server.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
lib/: load-user.js
routes/: post.js
src/: main.rs
src/templates/: isc.hbs  mit.hbs
tools/: VERIFICATION.txt  chocolateyinstall.ps1
users/: Brra1n0.json  Brra1n0.yaml
